feat : 자산 불러오기 로직 리팩토링 + 코드 가독성 개선